--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </div>
                         <div class="col-lg-10 col-sm-12">
                             <h3><a href="services.html">coding.</a></h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's printer took a galley of type and</p>
+                            <p>tanuj lund aadmi ha Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's printer took a galley of type and</p>
                             <p><a href="services.html"><img src="images/plus.png" alt="plus"></a></p>
                         </div>
                     </div>
