--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
     <!--Section-1-->
     <section class="section-1">
         <div class="jumbotron d-flex align-items-center">
+            
+            <a href="https://cooltext.com"><img src="https://images.cooltext.com/5598888.png" width="1075" height="125" alt="Welcome to Tanuj World" /></a>
+<br /><a href="https://cooltext.com"></a> <a href="https://cooltext.com/Edit-Logo?LogoID=4098171063"></a>
+            
             <div class="gradient"></div>
             <div class="container-fluid content">
                 <h1 data-aos="fade-up" data-aos-delay="100">Welcome to Tanuj world.</h1>
